src/objects/DMAPP__DM_Political_Map_Contact__c.object
<CustomObject>
    <description>PICKLIST CONFIGURATION

This object contains an entry for each node on the Political Map associated with an Opportunity. The picklist values for Adaptability and Your Status are configurable</description>
    <fields>
        <fullName>DMAPP__Absolute_Weight__c</fullName>
        <formula>CASE(DMAPP__Status__c, 
&quot;Mentor&quot;, 2.1, 
&quot;Enemy&quot;, 2.2, 
&quot;Supporter&quot;, 1.1, 
&quot;Non-Supporter&quot;, 1.2, 
&quot;Neutral&quot;, 0, 
&quot;Unknown&quot;, 0, 
0) 
+ 
CASE(DMAPP__Political__c, 
&quot;Inner Circle&quot;, 2, 
&quot;Political Structure&quot;, 1, 
&quot;Unknown&quot;, 0, 
&quot;Outside Political Structure&quot;, 0, 
0)
+ 
CASE(DMAPP__Key_Buyer_Role__c, 
&quot;decision maker&quot;, 2, 
&quot;approver&quot;, 2, 
&quot;evaluator&quot;, 1, 
&quot;user&quot;, 0, 
&quot;other&quot;, 0, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Absolute Weight</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Account_Relationship__c</fullName>
        <label>Account Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Internal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__Adaptability__c</fullName>
        <label>Adaptability</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laggard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conservative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pragmatist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visionary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__Always_On_Map__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Contact will always appear on the map rather than participating in the unattached contacts section.</description>
        <label>Always On Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Approved__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Buyer_Role_Weight__c</fullName>
        <formula>CASE(LOWER(DMAPP__Key_Buyer_Role__c) ,
&apos;decision maker&apos;, 7,
&apos;approver&apos;, 6,
&apos;evaluator&apos;, 3,
&apos;user&apos;, 2,
&apos;other&apos;, 1,
1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buyer Role Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Color__c</fullName>
        <formula>IF((ISPICKVAL(DMAPP__Status__c, &quot;Supporter&quot;) || ISPICKVAL(DMAPP__Status__c, &quot;Mentor&quot;)), &quot;green&quot;,
IF((ISPICKVAL(DMAPP__Status__c, &quot;Non-Supporter&quot;) || ISPICKVAL(DMAPP__Status__c, &quot;Enemy&quot;)), &quot;red&quot;,
IF((ISPICKVAL(DMAPP__Political__c, &quot;Political Structure&quot;) || ISPICKVAL(DMAPP__Political__c, &quot;Inner Circle&quot;)), &quot;yellow&quot;,
&quot;grey&quot;
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Political Map Contacts</relationshipLabel>
        <relationshipName>Political_Map_Contacts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Coverage__c</fullName>
        <label>Coverage</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brief contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-depth</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__DM_Opportunity_Extra__c</fullName>
        <label>Dealmaker Opportunity</label>
        <referenceTo>DMAPP__DM_Opportunity_Extra__c</referenceTo>
        <relationshipLabel>Political Map Contacts</relationshipLabel>
        <relationshipName>Political_Map_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Key_Buyer_Role__c</fullName>
        <inlineHelpText>The 4 standard buying roles are ranked, high to low: Decision Maker, Approver, Evaluator, User. This field records the highest ranking of these, or is empty if the buying role is not set to one of these. This influences contact ordering on the Launchpad.</inlineHelpText>
        <label>Key Buyer Role</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Key_Player__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This checkbox field is set for a Political Map Contact who has been added as a Key Player to the Decision Criteria page.</inlineHelpText>
        <label>Key Player</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Note__c</fullName>
        <label>Note</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__On_Bench__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Bench</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Overall_Weight__c</fullName>
        <formula>DMAPP__Relationship_Weight__c *  DMAPP__Political_Weight__c * DMAPP__Buyer_Role_Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Political_Weight__c</fullName>
        <formula>CASE(DMAPP__Political__c,
&apos;Unknown&apos;, 0,
&apos;Outside Political Structure&apos;, 1,
&apos;Political Structure&apos;, 4,
&apos;Inner Circle&apos;, 5,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Political Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Political__c</fullName>
        <label>Political Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside Political Structure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Political Structure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inner Circle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__Possible_Reports_To__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Possible Reports To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Political Map Contacts (Possible Reports To)</relationshipLabel>
        <relationshipName>Political_Map_Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Relationship_Weight__c</fullName>
        <formula>CASE(DMAPP__Status__c,
&apos;Unknown&apos;, 1,
&apos;Enemy&apos;, -5,
&apos;Non-Supporter&apos;, -3,
&apos;Neutral&apos;, 1,
&apos;Supporter&apos;, 3,
&apos;Mentor&apos;, 5,
1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Squares__c</fullName>
        <formula>MIN(6,
(CASE(DMAPP__Status__c,
&quot;Mentor&quot;, 2,
&quot;Enemy&quot;, 2,
&quot;Supporter&quot;, 1,
&quot;Non-Supporter&quot;, 1,
&quot;Neutral&quot;, 0,
&quot;Unknown&quot;, 0,
0))
+
(CASE(DMAPP__Political__c,
&quot;Inner Circle&quot;, 2,
&quot;Political Structure&quot;, 1,
&quot;Unknown&quot;, 0,
&quot;Outside Political Structure&quot;, 0,
0))
+
(CASE(DMAPP__Key_Buyer_Role__c,
&quot;decision maker&quot;, 2,
&quot;approver&quot;, 2,
&quot;evaluator&quot;, 1,
&quot;user&quot;, 0,
&quot;other&quot;, 0,
0))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Squares</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Status__c</fullName>
        <label>Your Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enemy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Supporter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supporter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Goto User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Political_Map_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Political Map Contact</label>
    <nameField>
        <label>Political Map Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Political Map Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>